--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 #grid-container {
@@ -23,9 +23,19 @@ body {
   background-color: #ffffff;
   display: flex;
   flex-wrap: wrap;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .cell {
   border: 1px solid #c0c0c065;
   box-sizing: border-box;
+}
+
+#panel{
+  height: 80vh;
+  width: 10vw;
+  background-color: rgb(207, 253, 255);
+  margin-left: 2rem;
 }
