--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #content {
@@ -26,20 +27,97 @@ body {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
+  border: 2.2rem solid #a8cbff;
+  border-radius: 10px;
+  box-shadow: 8px 8px 10px #aaaaaa;
 }
 
 .cell {
-  border: 1px solid #c0c0c065;
+  border: 1px solid #3333331c;
   box-sizing: border-box;
 }
 
 #panel{
-  height: 80vh;
-  width: 10vw;
-  background-color: rgb(207, 253, 255);
+  height: 60vh;
+  width: 15vw;
+  background-color: #a8cbff;
   margin-left: 2rem;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px #aaaaaa;
+  box-sizing: border-box;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center ;
+  justify-content: space-between  ;
+}
+
+#panel-tools{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.tool{
+  width: 8vw;
+  height: 5vh;
+  font-size: 1rem;
+}
+
+#clear{
+  height: 3vh;
+  width: 6vw;
+  margin-top: 1.5rem;
+}
+
+.tool, #clear{
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 3px 3px 7px #2e2e2e9d;
+  background-color: #ffcf86;
+  font-weight: bold;
 }
 
 .active{
-  background-color: bisque  ;
+  background-color: #ffba51  ;
+}
+
+#panel-pickers{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#color-picker {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+#color{
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+#color-display {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid #000;
+  background-color: #000;
+  cursor: pointer;
+}
+#size-picker{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.2rem;
+  font-weight: 800;
 }
